add watermark in passwordboxes

--- a/EncryptorApp/EncryptorApp.csproj
+++ b/EncryptorApp/EncryptorApp.csproj
@@ -73,7 +73,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PasswordBoxBehavior.cs" />
+    <Compile Include="WaterMarkTextHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
