--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -7,6 +7,7 @@
     <!-- ... -->
     <add key="masterCatalog" value="C:\Users\Jasper\Documents\CatalogPrinter\test.xlsx"/>
     <add key="key" value="fCZgUTOa/GHmYLhpFkFd+A==" />
+    <add key="pathEncryptorApp" value="C:\ProgramData\CatalogPrinterApp\EncryptorApp.exe" />
     <!-- ... -->
   </appSettings>
 </configuration>
