[wip] print to pdf

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -5,9 +5,21 @@
     </startup>
   <appSettings>
     <!-- ... -->
-    <add key="masterCatalog" value="C:\Users\Jasper\Documents\CatalogPrinter\test.xlsx"/>
+    <add key="masterCatalog" value="C:\Users\Jasper\Documents\masterCatalog.xlsm"/>
     <add key="key" value="fCZgUTOa/GHmYLhpFkFd+A==" />
     <add key="pathEncryptorApp" value="C:\ProgramData\CatalogPrinterApp\EncryptorApp.exe" />
+    <add key="outputPath" value="C:\Users\Public\Documents\CatalogPrinter" />
+    
+    <add key="cellCatalogType" value="B4" />
+    <add key="cellBtw" value="B5" />
+    <add key="cellFooterRight" value="B110" />
+    <add key="cellFooterLeft" value="B108" />
+    <add key="cellFooterMid" value="B109" />
+    <add key="cellHeaderRight" value="B107" />
+    <add key="cellHeaderLeft" value="B105" />
+    <add key="cellHeaderMid" value="B106" />
+    <add key="printArea" value="C3:M30" />
+    
     <!-- ... -->
   </appSettings>
 </configuration>
