--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -8,7 +8,7 @@
     <add key="masterCatalog" value="C:\Users\Jasper\Documents\masterCatalog.xlsm"/>
     <add key="key" value="fCZgUTOa/GHmYLhpFkFd+A==" />
     <add key="pathEncryptorApp" value="C:\ProgramData\CatalogPrinterApp\EncryptorApp.exe" />
-    <add key="outputPath" value="C:\Users\Public\Documents\CatalogPrinter" />
+    <add key="outputPath" value="C:\Users\Jasper\Documents\CatalogPrinter" />
     
     <add key="cellCatalogType" value="B4" />
     <add key="cellBtw" value="B5" />
@@ -19,6 +19,8 @@
     <add key="cellHeaderLeft" value="B105" />
     <add key="cellHeaderMid" value="B106" />
     <add key="printArea" value="C3:M30" />
+    
+    <add key="firstPage" value="2" />
     
     <!-- ... -->
   </appSettings>
