get btw field, two line mid footer

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -14,7 +14,8 @@
     <add key="cellBtw" value="B5" />
     <add key="cellFooterRight" value="B110" />
     <add key="cellFooterLeft" value="B108" />
-    <add key="cellFooterMid" value="B109" />
+    <add key="cellFooterMidFirst" value="B109" />
+    <add key="cellFooterMidSecond" value="C109" />
     <add key="cellHeaderRight" value="B107" />
     <add key="cellHeaderLeft" value="B105" />
     <add key="cellHeaderMid" value="B106" />
