[fix] ranges btw and catalogtype

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -10,8 +10,8 @@
     <add key="pathEncryptorApp" value="C:\ProgramData\CatalogPrinterApp\EncryptorApp.exe" />
     <add key="outputPath" value="C:\Users\Jasper\Documents\CatalogPrinter" />
     
-    <add key="cellCatalogType" value="B4" />
-    <add key="cellBtw" value="B5" />
+    <add key="cellCatalogType" value="D100" />
+    <add key="cellBtw" value="A6" />
     <add key="cellFooterRight" value="B110" />
     <add key="cellFooterLeft" value="B108" />
     <add key="cellFooterMidFirst" value="B109" />
