add sheetSummary name

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -20,6 +20,8 @@
     <add key="cellHeaderLeft" value="B105" />
     <add key="cellHeaderMid" value="B106" />
     <add key="printArea" value="C3:N30" />
+
+    <add key="sheetSummaryName" value="Overzicht werkbladen" />    
     
     <!-- ... -->
   </appSettings>
