--- a/ExcelUtil/ExcelUtil.csproj
+++ b/ExcelUtil/ExcelUtil.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConverterUtility.cs" />
     <Compile Include="ExcelUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
