--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -7,7 +7,8 @@
     <!-- ... -->
     <add key="masterCatalog" value="C:\Users\Jasper\Documents\masterCatalog.xlsm"/>
     <add key="key" value="fCZgUTOa/GHmYLhpFkFd+A==" />
-    <add key="pathEncryptorApp" value="C:\ProgramData\CatalogPrinterApp\EncryptorApp.exe" />
+    <add key="pathEncryptorApp" value="C:\ProgramData\CatalogPrinter\EncryptorApp.exe" />
+    <add key="pathToolsApp" value="C:\ProgramData\CatalogPrinter\ToolsApp.exe" />
     <add key="outputPath" value="C:\Users\Jasper\Documents\CatalogPrinter" />
     
     <add key="cellCatalogType" value="D100" />
