adjust print area

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -20,7 +20,7 @@
     <add key="cellHeaderRight" value="B107" />
     <add key="cellHeaderLeft" value="B105" />
     <add key="cellHeaderMid" value="B106" />
-    <add key="printArea" value="C3:N30" />
+    <add key="printArea" value="C3:M31" />
 
     <add key="sheetSummaryName" value="Overzicht werkbladen" />    
     
