Add korting cell to config file

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -12,6 +12,7 @@
     <add key="outputPath" value="C:\Users\Jasper\Documents\CatalogPrinter" />
     
     <add key="cellCatalogType" value="D100" />
+    <add key="cellKorting" value="B3" />    
     <add key="cellBtw" value="A6" />
     <add key="cellFooterRight" value="B110" />
     <add key="cellFooterLeft" value="B108" />
