--- a/ExcelUtil/ExcelUtil.csproj
+++ b/ExcelUtil/ExcelUtil.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ExcelUtility.cs" />
     <Compile Include="FormatData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorksheetExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
