Add keepExports parameter

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -1,8 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
   <appSettings>
     <!-- ... -->
     <add key="masterCatalog" value="C:\Users\Jasper\Documents\masterCatalog.xlsm"/>
@@ -23,7 +20,9 @@
     <add key="cellHeaderMid" value="B106" />
     <add key="printArea" value="C3:M31" />
 
-    <add key="sheetSummaryName" value="Overzicht werkbladen" />    
+    <add key="sheetSummaryName" value="Overzicht werkbladen" />  
+    
+    <add key="keepExports" value="1" />    
     
     <!-- ... -->
   </appSettings>
