Add keepExports key to config

--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -2,11 +2,11 @@
 <configuration>
   <appSettings>
     <!-- ... -->
-    <add key="masterCatalog" value="C:\Users\Jasper\Documents\masterCatalog.xlsm"/>
+    <add key="masterCatalog" value="C:\ProgramData\CatalogPrinter\masterCatalog.xlsm"/>
     <add key="key" value="fCZgUTOa/GHmYLhpFkFd+A==" />
     <add key="pathEncryptorApp" value="C:\ProgramData\CatalogPrinter\EncryptorApp.exe" />
     <add key="pathToolsApp" value="C:\ProgramData\CatalogPrinter\ToolsApp.exe" />
-    <add key="outputPath" value="C:\Users\Jasper\Documents\CatalogPrinter" />
+    <add key="outputPath" value="C:\ProgramData\CatalogPrinter" />
     
     <add key="cellCatalogType" value="D100" />
     <add key="cellKorting" value="B3" />    
