--- a/CatalogPrinterApp.config
+++ b/CatalogPrinterApp.config
@@ -24,6 +24,8 @@
     
     <add key="keepExports" value="1" />    
     
+    <add key="landscapeTarieven" value="197;1970;198;1980;199;1990;" />    
+    
     <!-- ... -->
   </appSettings>
 </configuration>
